[gd_scene load_steps=13 format=3 uid="uid://so7xny7lrgvg"]

[ext_resource type="Script" path="res://Scenes/Levels/game_scene.gd" id="1_ht6pd"]
[ext_resource type="PackedScene" uid="uid://cie1ej7ftah1t" path="res://Scenes/Objects/tower.tscn" id="1_layhi"]
[ext_resource type="PackedScene" uid="uid://8dia8u2vk4hp" path="res://Scenes/Objects/enemy.tscn" id="2_hfs2f"]
[ext_resource type="Script" path="res://Scenes/Levels/path.gd" id="2_qjaiq"]
[ext_resource type="Script" path="res://Scenes/Objects/bullet.gd" id="3_4x23p"]
[ext_resource type="Texture2D" uid="uid://b4lgreeffcstj" path="res://Assets/Tilesheet/towerDefense_tilesheet.png" id="4_pve8t"]
[ext_resource type="Script" path="res://Scenes/Levels/ui.gd" id="6_eumci"]
[ext_resource type="Texture2D" uid="uid://beky25dr4gtfv" path="res://Assets/grass_template2.jpg" id="8_wsr7e"]
[ext_resource type="PackedScene" uid="uid://dfv43mturl5ni" path="res://Scenes/Objects/fish.tscn" id="9_ekbcw"]

[sub_resource type="Curve2D" id="Curve2D_868cp"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -36, 138, -44.5477, -3.53553, 44.5477, 3.53553, 108, 94, 169.651, -256.58, -169.651, 256.58, 227, 123, -40.3051, -19.0919, 40.3051, 19.0919, 249, 189, -26.163, 0.707107, 26.163, -0.707107, 312, 221, 0, 0, 0, 0, 361, 209, -36.7696, 0.707107, 36.7696, -0.707107, 468, 151, -30.4056, -1.41421, 30.4056, 1.41421, 573, 142, -36.7696, -21.9203, 36.7696, 21.9203, 705, 181, -22.6274, -25.4558, 22.6274, 25.4558, 780, 266, -26.163, -18.3848, 26.163, 18.3848, 886, 329, -30.4056, -2.82843, 30.4056, 2.82843, 969, 391, 0, 0, 0, 0, 1066, 355, -17.6777, 7.77818, 17.6777, -7.77818, 1135, 276, 0, 0, 0, 0, 1188, 263)
}
point_count = 15

[sub_resource type="CircleShape2D" id="CircleShape2D_5hpes"]
radius = 12.0

[sub_resource type="PackedScene" id="PackedScene_2qc50"]
_bundled = {
"conn_count": 1,
"conns": PackedInt32Array(0, 0, 14, 13, 2, 0, 0),
"editable_instances": [],
"names": PackedStringArray("Bullet", "collision_layer", "collision_mask", "script", "Area2D", "CollisionShape2D", "shape", "Sprite2D", "rotation", "texture", "hframes", "vframes", "frame", "_on_area_entered", "area_entered"),
"node_count": 3,
"node_paths": [],
"nodes": PackedInt32Array(-1, -1, 4, 0, -1, 3, 1, 0, 2, 1, 3, 2, 0, 0, 0, 5, 5, -1, 1, 6, 3, 0, 0, 0, 7, 7, -1, 5, 8, 4, 9, 5, 10, 6, 11, 7, 12, 8, 0),
"variants": [8, 2, ExtResource("3_4x23p"), SubResource("CircleShape2D_5hpes"), 4.71239, ExtResource("4_pve8t"), 23, 13, 272],
"version": 3
}

[node name="GameScene" type="Node2D"]
script = ExtResource("1_ht6pd")

[node name="BackgroundTerrain" type="TextureRect" parent="."]
offset_top = 7.0
offset_right = 1280.0
offset_bottom = 727.0
texture = ExtResource("8_wsr7e")

[node name="Tower" parent="." instance=ExtResource("1_layhi")]
position = Vector2(390, 287)

[node name="Path" type="Path2D" parent="."]
position = Vector2(38.5882, 2.30559)
scale = Vector2(1.04412, 1.84577)
curve = SubResource("Curve2D_868cp")
script = ExtResource("2_qjaiq")
enemy_scene = ExtResource("2_hfs2f")

[node name="Timer" type="Timer" parent="Path"]
wait_time = 4.0
one_shot = true
autostart = true

[node name="Tower2" parent="." instance=ExtResource("1_layhi")]
position = Vector2(941, 346)
bullet_scene = SubResource("PackedScene_2qc50")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 331)

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("6_eumci")

[node name="Main" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2

[node name="ScorePanel" type="Panel" parent="UI/Main"]
layout_mode = 0
offset_right = 262.0
offset_bottom = 56.0

[node name="ScoreLabel" type="Label" parent="UI/Main/ScorePanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -11.5
offset_right = 113.0
offset_bottom = 11.5
grow_vertical = 2
text = "SCORE: 0"

[node name="WaveProgress" type="ProgressBar" parent="UI/Main"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -162.0
offset_right = 162.0
offset_bottom = 27.0
grow_horizontal = 2
max_value = 25.0
step = 1.0
show_percentage = false

[node name="WaveProgressLabel" type="Label" parent="UI/Main/WaveProgress"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[node name="SpawnMenu" type="Panel" parent="UI/Main"]
visible = false
layout_mode = 0
offset_left = 476.0
offset_top = 99.0
offset_right = 589.0
offset_bottom = 161.0

[node name="SpawnTower" type="Button" parent="UI/Main/SpawnMenu"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 11.0
mouse_force_pass_scroll_events = false
text = "Spawn Tower"

[node name="CloseButton" type="Button" parent="UI/Main/SpawnMenu"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="TowerMenu" type="Panel" parent="UI/Main"]
visible = false
layout_mode = 0
offset_left = 604.0
offset_top = 107.0
offset_right = 799.0
offset_bottom = 188.0

[node name="RemoveTower" type="Button" parent="UI/Main/TowerMenu"]
layout_mode = 0
offset_right = 194.0
offset_bottom = 32.0
text = "Remove Tower"

[node name="MoveTower" type="Button" parent="UI/Main/TowerMenu"]
layout_mode = 0
offset_top = 32.0
offset_right = 194.0
offset_bottom = 64.0
text = "Move Tower"

[node name="Fish" parent="." instance=ExtResource("9_ekbcw")]
position = Vector2(67, 534)

[connection signal="tower_created" from="." to="UI" method="_on_game_scene_tower_created"]
[connection signal="timeout" from="Path/Timer" to="Path" method="_on_timer_timeout"]
[connection signal="pressed" from="UI/Main/SpawnMenu/SpawnTower" to="." method="_on_spawn_tower_pressed"]
[connection signal="pressed" from="UI/Main/TowerMenu/RemoveTower" to="." method="_on_remove_tower_pressed"]
[connection signal="pressed" from="UI/Main/TowerMenu/MoveTower" to="." method="_on_move_tower_pressed"]
